// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input - bad input type should render empty div if type is unrecognized 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-undefined _ni-wrapper _ni-wrapper-undefined">
  <label class="ni-label _ni-label ni-empty-label"></label>
</div>

`;

exports[`Input - bad input type should render empty div if type is unrecognized 2`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-undefined _ni-wrapper _ni-wrapper-undefined">
  <label class="ni-label _ni-label ni-empty-label"></label>
</div>

`;

exports[`Input - bad input type should render empty div if type is unrecognized 3`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-undefined _ni-wrapper _ni-wrapper-undefined">
  <label class="ni-label _ni-label ni-empty-label"></label>
</div>

`;

exports[`Input - bad input type should render empty div if type is unrecognized 4`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper- _ni-wrapper _ni-wrapper-">
  <label class="ni-label _ni-label ni-empty-label"></label>
</div>

`;

exports[`Input - bad input type should render empty div if type is unrecognized 5`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-unrecognized _ni-wrapper _ni-wrapper-unrecognized">
  <label class="ni-label _ni-label ni-empty-label"></label>
</div>

`;

exports[`Input - bad input type should render empty div if type is unrecognized 6`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-undefined _ni-wrapper _ni-wrapper-undefined">
  <label class="ni-label _ni-label ni-empty-label"></label>
</div>

`;

exports[`Input - input type: date should render with parameters [type, label, outputLabel.md, disabled, value] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-date _ni-wrapper _ni-wrapper-date">
  <label class="ni-label _ni-label">Label Here:</label>
  <input
    type="date"
    class="ni-input ni-date _ni-input _ni-date"
    disabled={true}
    value="Prefilled default text"
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: date should render with parameters [type, label] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-date _ni-wrapper _ni-wrapper-date">
  <label class="ni-label _ni-label">Label Here:</label>
  <input
    type="date"
    class="ni-input ni-date _ni-input _ni-date"
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: date should render with parameters [type, name, id, class, title, placeholder, required, pattern, maxlength, outputLabel.md] 1`] = `
preact-render-spy (1 nodes)
-------
<div
  id="input-id-wrapper"
  class="ni-wrapper ni-wrapper-date _ni-wrapper _ni-wrapper-date input-class-wrapper"
>
  <label class="ni-label _ni-label ni-empty-label"></label>
  <input
    type="date"
    name="input-name"
    id="input-id"
    class="ni-input ni-date _ni-input _ni-date input-class"
    title="Enter here"
    required={true}
    placeholder="Enter here"
    pattern=".+"
    maxlength={15}
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: date should render with parameters [type] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-date _ni-wrapper _ni-wrapper-date">
  <label class="ni-label _ni-label ni-empty-label"></label>
  <input
    type="date"
    class="ni-input ni-date _ni-input _ni-date"
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: datetime-local should render with parameters [type, label, outputLabel.md, disabled, value] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-datetime-local _ni-wrapper _ni-wrapper-datetime-local">
  <label class="ni-label _ni-label">Label Here:</label>
  <input
    type="datetime-local"
    class="ni-input ni-datetime-local _ni-input _ni-datetime-local"
    disabled={true}
    value="Prefilled default text"
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: datetime-local should render with parameters [type, label] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-datetime-local _ni-wrapper _ni-wrapper-datetime-local">
  <label class="ni-label _ni-label">Label Here:</label>
  <input
    type="datetime-local"
    class="ni-input ni-datetime-local _ni-input _ni-datetime-local"
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: datetime-local should render with parameters [type, name, id, class, title, placeholder, required, pattern, maxlength, outputLabel.md] 1`] = `
preact-render-spy (1 nodes)
-------
<div
  id="input-id-wrapper"
  class="ni-wrapper ni-wrapper-datetime-local _ni-wrapper _ni-wrapper-datetime-local input-class-wrapper"
>
  <label class="ni-label _ni-label ni-empty-label"></label>
  <input
    type="datetime-local"
    name="input-name"
    id="input-id"
    class="ni-input ni-datetime-local _ni-input _ni-datetime-local input-class"
    title="Enter here"
    required={true}
    placeholder="Enter here"
    pattern=".+"
    maxlength={15}
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: datetime-local should render with parameters [type] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-datetime-local _ni-wrapper _ni-wrapper-datetime-local">
  <label class="ni-label _ni-label ni-empty-label"></label>
  <input
    type="datetime-local"
    class="ni-input ni-datetime-local _ni-input _ni-datetime-local"
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: email should render with parameters [type, label, outputLabel.md, disabled, value] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-email _ni-wrapper _ni-wrapper-email">
  <label class="ni-label _ni-label">Label Here:</label>
  <input
    type="email"
    class="ni-input ni-email _ni-input _ni-email"
    disabled={true}
    value="Prefilled default text"
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: email should render with parameters [type, label] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-email _ni-wrapper _ni-wrapper-email">
  <label class="ni-label _ni-label">Label Here:</label>
  <input
    type="email"
    class="ni-input ni-email _ni-input _ni-email"
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: email should render with parameters [type, name, id, class, title, placeholder, required, pattern, maxlength, outputLabel.md] 1`] = `
preact-render-spy (1 nodes)
-------
<div
  id="input-id-wrapper"
  class="ni-wrapper ni-wrapper-email _ni-wrapper _ni-wrapper-email input-class-wrapper"
>
  <label class="ni-label _ni-label ni-empty-label"></label>
  <input
    type="email"
    name="input-name"
    id="input-id"
    class="ni-input ni-email _ni-input _ni-email input-class"
    title="Enter here"
    required={true}
    placeholder="Enter here"
    pattern=".+"
    maxlength={15}
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: email should render with parameters [type] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-email _ni-wrapper _ni-wrapper-email">
  <label class="ni-label _ni-label ni-empty-label"></label>
  <input
    type="email"
    class="ni-input ni-email _ni-input _ni-email"
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: hidden should render with parameters [type, label, outputLabel.md, disabled, value] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-hidden _ni-wrapper _ni-wrapper-hidden">
  <label class="ni-label _ni-label">Label Here:</label>
  <input
    type="hidden"
    class="ni-input ni-hidden _ni-input _ni-hidden"
    disabled={true}
    value="Prefilled default text"
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: hidden should render with parameters [type, label] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-hidden _ni-wrapper _ni-wrapper-hidden">
  <label class="ni-label _ni-label">Label Here:</label>
  <input
    type="hidden"
    class="ni-input ni-hidden _ni-input _ni-hidden"
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: hidden should render with parameters [type, name, id, class, title, placeholder, required, pattern, maxlength, outputLabel.md] 1`] = `
preact-render-spy (1 nodes)
-------
<div
  id="input-id-wrapper"
  class="ni-wrapper ni-wrapper-hidden _ni-wrapper _ni-wrapper-hidden input-class-wrapper"
>
  <label class="ni-label _ni-label ni-empty-label"></label>
  <input
    type="hidden"
    name="input-name"
    id="input-id"
    class="ni-input ni-hidden _ni-input _ni-hidden input-class"
    title="Enter here"
    required={true}
    placeholder="Enter here"
    pattern=".+"
    maxlength={15}
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: hidden should render with parameters [type] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-hidden _ni-wrapper _ni-wrapper-hidden">
  <label class="ni-label _ni-label ni-empty-label"></label>
  <input
    type="hidden"
    class="ni-input ni-hidden _ni-input _ni-hidden"
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: html should render with parameters [[type, html, label]] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-html _ni-wrapper _ni-wrapper-html">
  <label class="ni-label _ni-label">Some Label</label>
  <div class="ni-input ni-html _ni-input _ni-html">Test String</div>
</div>

`;

exports[`Input - input type: html should render with parameters [[type, html, outputLabel.md, value]] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-html _ni-wrapper _ni-wrapper-html">
  <label class="ni-label _ni-label ni-empty-label"></label>
  <div class="ni-input ni-html _ni-input _ni-html">
    <h1>Test String</h1>
  </div>
</div>

`;

exports[`Input - input type: html should render with parameters [[type, html]] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-html _ni-wrapper _ni-wrapper-html">
  <label class="ni-label _ni-label ni-empty-label"></label>
  <div class="ni-input ni-html _ni-input _ni-html"></div>
</div>

`;

exports[`Input - input type: html should render with parameters [[type]] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-html _ni-wrapper _ni-wrapper-html">
  <label class="ni-label _ni-label ni-empty-label"></label>
  <div class="ni-input ni-html _ni-input _ni-html"></div>
</div>

`;

exports[`Input - input type: month should render with parameters [type, label, outputLabel.md, disabled, value] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-month _ni-wrapper _ni-wrapper-month">
  <label class="ni-label _ni-label">Label Here:</label>
  <input
    type="month"
    class="ni-input ni-month _ni-input _ni-month"
    disabled={true}
    value="Prefilled default text"
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: month should render with parameters [type, label] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-month _ni-wrapper _ni-wrapper-month">
  <label class="ni-label _ni-label">Label Here:</label>
  <input
    type="month"
    class="ni-input ni-month _ni-input _ni-month"
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: month should render with parameters [type, name, id, class, title, placeholder, required, pattern, maxlength, outputLabel.md] 1`] = `
preact-render-spy (1 nodes)
-------
<div
  id="input-id-wrapper"
  class="ni-wrapper ni-wrapper-month _ni-wrapper _ni-wrapper-month input-class-wrapper"
>
  <label class="ni-label _ni-label ni-empty-label"></label>
  <input
    type="month"
    name="input-name"
    id="input-id"
    class="ni-input ni-month _ni-input _ni-month input-class"
    title="Enter here"
    required={true}
    placeholder="Enter here"
    pattern=".+"
    maxlength={15}
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: month should render with parameters [type] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-month _ni-wrapper _ni-wrapper-month">
  <label class="ni-label _ni-label ni-empty-label"></label>
  <input
    type="month"
    class="ni-input ni-month _ni-input _ni-month"
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: number should render with parameters [type, label, outputLabel.md, disabled, value] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-number _ni-wrapper _ni-wrapper-number">
  <label class="ni-label _ni-label">Label Here:</label>
  <input
    type="number"
    class="ni-input ni-number _ni-input _ni-number"
    disabled={true}
    value="Prefilled default text"
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: number should render with parameters [type, label] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-number _ni-wrapper _ni-wrapper-number">
  <label class="ni-label _ni-label">Label Here:</label>
  <input
    type="number"
    class="ni-input ni-number _ni-input _ni-number"
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: number should render with parameters [type, name, id, class, title, placeholder, required, pattern, maxlength, outputLabel.md] 1`] = `
preact-render-spy (1 nodes)
-------
<div
  id="input-id-wrapper"
  class="ni-wrapper ni-wrapper-number _ni-wrapper _ni-wrapper-number input-class-wrapper"
>
  <label class="ni-label _ni-label ni-empty-label"></label>
  <input
    type="number"
    name="input-name"
    id="input-id"
    class="ni-input ni-number _ni-input _ni-number input-class"
    title="Enter here"
    required={true}
    placeholder="Enter here"
    pattern=".+"
    maxlength={15}
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: number should render with parameters [type] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-number _ni-wrapper _ni-wrapper-number">
  <label class="ni-label _ni-label ni-empty-label"></label>
  <input
    type="number"
    class="ni-input ni-number _ni-input _ni-number"
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: password should render with parameters [type, label, outputLabel.md, disabled, value] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-password _ni-wrapper _ni-wrapper-password">
  <label class="ni-label _ni-label">Label Here:</label>
  <input
    type="password"
    class="ni-input ni-password _ni-input _ni-password"
    disabled={true}
    value="Prefilled default text"
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: password should render with parameters [type, label] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-password _ni-wrapper _ni-wrapper-password">
  <label class="ni-label _ni-label">Label Here:</label>
  <input
    type="password"
    class="ni-input ni-password _ni-input _ni-password"
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: password should render with parameters [type, name, id, class, title, placeholder, required, pattern, maxlength, outputLabel.md] 1`] = `
preact-render-spy (1 nodes)
-------
<div
  id="input-id-wrapper"
  class="ni-wrapper ni-wrapper-password _ni-wrapper _ni-wrapper-password input-class-wrapper"
>
  <label class="ni-label _ni-label ni-empty-label"></label>
  <input
    type="password"
    name="input-name"
    id="input-id"
    class="ni-input ni-password _ni-input _ni-password input-class"
    title="Enter here"
    required={true}
    placeholder="Enter here"
    pattern=".+"
    maxlength={15}
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: password should render with parameters [type] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-password _ni-wrapper _ni-wrapper-password">
  <label class="ni-label _ni-label ni-empty-label"></label>
  <input
    type="password"
    class="ni-input ni-password _ni-input _ni-password"
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: select should render with parameters [type, label, outputLabel.md, value, disabled, options] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-select _ni-wrapper _ni-wrapper-select">
  <label class="ni-label _ni-label">Label Here:</label>
  <select
    class="ni-input ni-select _ni-input _ni-select"
    disabled={true}
    placeholder=""
    onInput={[Function anonymous]}
  >
    <option
      value="Bug Report"
      selected={false}
    >
      Bug Report
    </option>
    <option
      value="Feature Request"
      selected={false}
    >
      Feature Request
    </option>
    <option
      value="Question"
      selected={true}
    >
      Question
    </option>
  </select>
</div>

`;

exports[`Input - input type: select should render with parameters [type, label, value, placeholder, options] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-select _ni-wrapper _ni-wrapper-select">
  <label class="ni-label _ni-label">Label Here:</label>
  <select
    class="ni-input ni-select _ni-input _ni-select"
    placeholder="-- Issue Type --"
    onInput={[Function anonymous]}
  >
    <option
      value="Bug Report"
      selected={true}
    >
      Bug Report
    </option>
  </select>
</div>

`;

exports[`Input - input type: select should render with parameters [type, name, id, class, title, required, placeholder, outputLabel.md, options] 1`] = `
preact-render-spy (1 nodes)
-------
<div
  id="input-id-wrapper"
  class="ni-wrapper ni-wrapper-select _ni-wrapper _ni-wrapper-select input-class-wrapper"
>
  <label class="ni-label _ni-label ni-empty-label"></label>
  <select
    name="input-name"
    id="input-id"
    class="ni-input ni-select _ni-input _ni-select input-class"
    title="Enter here"
    required={true}
    placeholder="-- Issue Type --"
    onInput={[Function anonymous]}
  >
    <option
      value=""
      selected={true}
    >
      -- Issue Type --
    </option>
    <option
      value="Bug Report"
      selected={false}
    >
      Bug Report
    </option>
    <option
      value="Feature Request"
      selected={false}
    >
      Feature Request
    </option>
    <option
      value="Question"
      selected={false}
    >
      Question
    </option>
  </select>
</div>

`;

exports[`Input - input type: select should render with parameters [type, options] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-select _ni-wrapper _ni-wrapper-select">
  <label class="ni-label _ni-label ni-empty-label"></label>
  <select
    class="ni-input ni-select _ni-input _ni-select"
    placeholder=""
    onInput={[Function anonymous]}
  >
    <option
      value=""
      selected={true}
    >
    </option>
    <option
      value="Bug Report"
      selected={false}
    >
      Bug Report
    </option>
  </select>
</div>

`;

exports[`Input - input type: select should render with parameters [type] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-select _ni-wrapper _ni-wrapper-select">
  <label class="ni-label _ni-label ni-empty-label"></label>
  <select
    class="ni-input ni-select _ni-input _ni-select"
    placeholder=""
    onInput={[Function anonymous]}
  >
    <option
      value=""
      selected={true}
    >
    </option>
  </select>
</div>

`;

exports[`Input - input type: submit should render with parameters [[type, submit, label]] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-submit _ni-wrapper _ni-wrapper-submit">
  <label class="ni-label _ni-label">Some Label</label>
  <button
    type="submit"
    class="ni-input ni-submit _ni-input _ni-submit"
  >Submit
  </button>
</div>

`;

exports[`Input - input type: submit should render with parameters [[type, submit, outputLabel.md, value, disabled]] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-submit _ni-wrapper _ni-wrapper-submit">
  <label class="ni-label _ni-label ni-empty-label"></label>
  <button
    type="submit"
    class="ni-input ni-submit _ni-input _ni-submit"
    disabled={true}
  >Test String
  </button>
</div>

`;

exports[`Input - input type: submit should render with parameters [[type]] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-submit _ni-wrapper _ni-wrapper-submit">
  <label class="ni-label _ni-label ni-empty-label"></label>
  <button
    type="submit"
    class="ni-input ni-submit _ni-input _ni-submit"
  >Submit
  </button>
</div>

`;

exports[`Input - input type: text should render with parameters [type, label, outputLabel.md, disabled, value] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-text _ni-wrapper _ni-wrapper-text">
  <label class="ni-label _ni-label">Label Here:</label>
  <input
    type="text"
    class="ni-input ni-text _ni-input _ni-text"
    disabled={true}
    value="Prefilled default text"
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: text should render with parameters [type, label] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-text _ni-wrapper _ni-wrapper-text">
  <label class="ni-label _ni-label">Label Here:</label>
  <input
    type="text"
    class="ni-input ni-text _ni-input _ni-text"
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: text should render with parameters [type, name, id, class, title, placeholder, required, pattern, maxlength, outputLabel.md] 1`] = `
preact-render-spy (1 nodes)
-------
<div
  id="input-id-wrapper"
  class="ni-wrapper ni-wrapper-text _ni-wrapper _ni-wrapper-text input-class-wrapper"
>
  <label class="ni-label _ni-label ni-empty-label"></label>
  <input
    type="text"
    name="input-name"
    id="input-id"
    class="ni-input ni-text _ni-input _ni-text input-class"
    title="Enter here"
    required={true}
    placeholder="Enter here"
    pattern=".+"
    maxlength={15}
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: text should render with parameters [type] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-text _ni-wrapper _ni-wrapper-text">
  <label class="ni-label _ni-label ni-empty-label"></label>
  <input
    type="text"
    class="ni-input ni-text _ni-input _ni-text"
    value=""
    onInput={[Function anonymous]}
   />
</div>

`;

exports[`Input - input type: textarea should render with parameters [[type, label, outputLabel.md, disabled, value]] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-textarea _ni-wrapper _ni-wrapper-textarea">
  <label class="ni-label _ni-label">Label Here:</label>
  <textarea
    class="ni-input ni-textarea _ni-input _ni-textarea"
    disabled={true}
    rows={4}
    value="Prefilled default text"
    onInput={[Function anonymous]}
  >
  </textarea>
</div>

`;

exports[`Input - input type: textarea should render with parameters [[type, label]] 1`] = `
preact-render-spy (1 nodes)
-------
<div class="ni-wrapper ni-wrapper-textarea _ni-wrapper _ni-wrapper-textarea">
  <label class="ni-label _ni-label">Label Here:</label>
  <textarea
    class="ni-input ni-textarea _ni-input _ni-textarea"
    rows={4}
    value=""
    onInput={[Function anonymous]}
  >
  </textarea>
</div>

`;

exports[`Input - input type: textarea should render with parameters [[type, name, id, class, title, placeholder, required, rows, maxlength, outputLabel.md]] 1`] = `
preact-render-spy (1 nodes)
-------
<div
  id="input-id-wrapper"
  class="ni-wrapper ni-wrapper-textarea _ni-wrapper _ni-wrapper-textarea input-class-wrapper"
>
  <label class="ni-label _ni-label ni-empty-label"></label>
  <textarea
    name="input-name"
    id="input-id"
    class="ni-input ni-textarea _ni-input _ni-textarea input-class"
    title="Enter here"
    required={true}
    rows={10}
    maxlength={15}
    placeholder="Enter here"
    value=""
    onInput={[Function anonymous]}
  >
  </textarea>
</div>

`;
